--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ ext {
 }
 
 dependencies {
+	compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.1.8.RELEASE'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-quartz'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -26,6 +27,10 @@ dependencies {
 	// lombok
 	compileOnly 'org.projectlombok:lombok:1.18.8'
 	annotationProcessor 'org.projectlombok:lombok:1.18.8'
+
+	//ModelMapper
+	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.5'
+
 }
 
 dependencyManagement {
