--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
 	//ModelMapper
 	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.5'
 
+	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
+
+
 
 }
 
